# mzrds

./: .gitignore  README.md  build.py  install.sh  pyproject.toml  pytest.ini  run_tests.sh
.github/workflows/: release.yml
src/mzrds/: __init__.py  cli.py  client.py  config.py  executor.py
src/mzrds/commands/: __init__.py  connection.py  scan.py
tests/: PERFORMANCE.md  __init__.py  conftest.py  test_client.py  test_config.py  test_executor.py  test_scan.py  test_smoke.py
