[project]
name = "mzrds"
version = "0.1.3"
description = "A Redis CLI tool without redis-cli dependency"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer[all]>=0.12.0",
    "redis[hiredis]>=5.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
mzrds = "mzrds.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mzrds"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=8.0.0",
]

